--- a/PiUWP/BabyReport/BabyReport/Embedable.html
+++ b/PiUWP/BabyReport/BabyReport/Embedable.html
@@ -17,6 +17,10 @@
             vertical-align: middle;
             height: 100%;
         }
+        iframe {
+            width:100%;
+            height:100%;
+        }
     </style>
 </head>
 <body>
